Phan bo cau truc ban dau cua du an, hoan thien co ban dashboard page voi 2 component chinh la sidebar & header

--- a/src/app/components/management/management.component.html
+++ b/src/app/components/management/management.component.html
@@ -1,1 +1,7 @@
-<p>management works!</p>
+<div class="tms-app">
+  <div class="tms-app--main">
+    <app-tms-header></app-tms-header>
+  </div>
+
+  <router-outlet></router-outlet>
+</div>
