Bat dau thuc hien cac popup modal

--- a/src/app/components/management/management.component.html
+++ b/src/app/components/management/management.component.html
@@ -3,5 +3,7 @@
     <app-tms-header></app-tms-header>
   </div>
 
+  <app-tms-popup-modal></app-tms-popup-modal>
+
   <router-outlet></router-outlet>
 </div>
