--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -2,11 +2,18 @@ $tms-color-primary: "";
 
 $tms-color-white: #FFFFFF;
 $tms-color-black: #000000;
+$tms-color-grey: #E0E0E0;
 $tms-color-blue: #2196F3;
+$tms-color-red: #FF0000;
+
 $tms-color-white-light: rgba($tms-color-white, 0.16);
 $tms-color-white-medium: rgba($tms-color-white, 0.3);
 
+$tms-color-black-light: rgba($tms-color-black, 0.45);
+
 $tms-color-user: #3AC4AB;
+
+$tms-color-text: #1F1F1F;
 
 $tms-color-sidebar: rgba($tms-color-black, 0.7);
 $tms-color-sidebar-hover: #212121;
