Sua loi width cua input

--- a/src/app/shared/components/tms-popup-modal/tms-popup-modal-department/tms-popup-modal-department.component.html
+++ b/src/app/shared/components/tms-popup-modal/tms-popup-modal-department/tms-popup-modal-department.component.html
@@ -9,18 +9,18 @@
     <app-tms-text-field
       inputLabel="Chọn phòng ban"
       inputPlaceholder="Chọn phòng ban"
-      textFieldWidth="48%"
+      [ngStyle]="{width: '50%'}"
       [isRequired]="true"
     ></app-tms-text-field>
 
     <app-tms-text-field
       inputLabel="Từ ngày"
-      textFieldWidth="23%"
+      [ngStyle]="{width: '25%'}"
     ></app-tms-text-field>
 
     <app-tms-text-field
       inputLabel="Đến ngày"
-      textFieldWidth="23%"
+      [ngStyle]="{width: '25%'}"
     ></app-tms-text-field>
   </div>
 
