hoan thanh co ban 2 modal phong ban va du an

--- a/src/app/components/tms-header/tms-header.component.html
+++ b/src/app/components/tms-header/tms-header.component.html
@@ -25,6 +25,7 @@
     <dx-popover
       target="#tms-header__dropdown-button"
       position="bottom"
+      [elementAttr]="{class: 'tms-header__popover'}"
       [width]="234"
       [visible]="dropdownVisible"
       (onHidden)="dropdownVisible = false"
