--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,4 +1,6 @@
-$tms-color-primary: "";
+$tms-color-primary: #007BFF;
+$tms-color-primary-hover: #2A7EFC;
+$tms-color-primary-hightlight: #0062CC;
 
 $tms-color-white: #FFFFFF;
 $tms-color-black: #000000;
