--- a/src/app/shared/components/tms-popup-modal/tms-popup-modal.component.html
+++ b/src/app/shared/components/tms-popup-modal/tms-popup-modal.component.html
@@ -1,7 +1,8 @@
 <dx-popup
   class="tms-modal"
-  [width]="618"
+  [width]="modalWidth"
   height="auto"
+  [title]="currentTemplateTitle"
   [showTitle]="true"
   [shadingColor]="'rgba(0, 0, 0, 0.45)'"
   [dragEnabled]="true"
@@ -10,15 +11,15 @@
   [visible]="true"
   [contentTemplate]="currentTemplate"
 >
-  <div *dxTemplate="let data of 'project'">
+  <div *dxTemplate="let data of 'departmentTemplate'">
     <app-tms-popup-modal-department></app-tms-popup-modal-department>
   </div>
 
-  <div *dxTemplate="let data of 'department'">
-    <div>Hello Department</div>
+  <div *dxTemplate="let data of 'projectTemplate'">
+    <app-tms-popup-modal-project></app-tms-popup-modal-project>
   </div>
 
-  <div *dxTemplate="let data of 'task'">
+  <div *dxTemplate="let data of 'taskTemplate'">
     <div>Hello Task</div>
   </div>
 </dx-popup>
