Dung grid cho page project, hoan thanh giao dien gan hoan thien cho cac popup, style header component rieng biet cho tung page

--- a/src/app/components/tms-dashboard/tms-dashboard.component.html
+++ b/src/app/components/tms-dashboard/tms-dashboard.component.html
@@ -1,1 +1,7 @@
+<div class="tms-dashboard">
+  <app-tms-header
+    [headerItems]="headerItems"
+  ></app-tms-header>
+</div>
+
 <app-tms-sidebar></app-tms-sidebar>
