--- a/src/app/shared/components/tms-popup-modal/tms-popup-modal-department/tms-popup-modal-department.component.html
+++ b/src/app/shared/components/tms-popup-modal/tms-popup-modal-department/tms-popup-modal-department.component.html
@@ -1,4 +1,4 @@
-<div class="tms-modal--department">
+<div class="tms-modal__department">
   <app-tms-text-field
     [inputLabel]="modalDepartmentVariables.ModalFieldNameLabel"
     [inputPlaceholder]="modalDepartmentVariables.ModalFieldNamePlaceholder"
