--- a/src/app/shared/components/tms-popup-modal/tms-popup-modal-footer/tms-popup-modal-footer.component.html
+++ b/src/app/shared/components/tms-popup-modal/tms-popup-modal-footer/tms-popup-modal-footer.component.html
@@ -1,5 +1,8 @@
 <div class="tms-modal__footer">
-  <div class="tms-modal__button--secondary">
+  <div
+    class="tms-modal__button--secondary"
+    (click)="hidePopup()"
+  >
     {{ modalVariables.ButtonTextCancel }}
   </div>
 
