--- a/src/app/shared/components/tms-popup-modal/tms-popup-modal-project/tms-popup-modal-project.component.html
+++ b/src/app/shared/components/tms-popup-modal/tms-popup-modal-project/tms-popup-modal-project.component.html
@@ -1,4 +1,4 @@
-<div class="tms-modal--project">
+<div class="tms-modal__project">
   <app-tms-text-field
     [inputLabel]="modalProjectVariables.ModalFieldNameLabel"
     [inputPlaceholder]="modalProjectVariables.ModalFieldNamePlaceholder"
