--- a/src/app/shared/components/tms-popup-modal/tms-popup-modal.component.html
+++ b/src/app/shared/components/tms-popup-modal/tms-popup-modal.component.html
@@ -6,10 +6,11 @@
   [showTitle]="true"
   [shadingColor]="'rgba(0, 0, 0, 0.45)'"
   [dragEnabled]="true"
-  [closeOnOutsideClick]="true"
+  [closeOnOutsideClick]="false"
   [showCloseButton]="true"
-  [visible]="true"
+  [visible]="popupVisible"
   [contentTemplate]="currentTemplate"
+  (onHidden)="popupVisible = false"
 >
   <div *dxTemplate="let data of 'departmentTemplate'">
     <app-tms-popup-modal-department></app-tms-popup-modal-department>
@@ -20,6 +21,6 @@
   </div>
 
   <div *dxTemplate="let data of 'taskTemplate'">
-    <div>Hello Task</div>
+    <app-tms-popup-modal-task></app-tms-popup-modal-task>
   </div>
 </dx-popup>
