--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -5,13 +5,17 @@ $tms-color-primary-hightlight: #0062CC;
 $tms-color-white: #FFFFFF;
 $tms-color-black: #000000;
 $tms-color-grey: #E0E0E0;
+$tms-color-grey-light: #FAFAFA;
 $tms-color-blue: #2196F3;
+$tms-color-blue-light: #e1eeff;
 $tms-color-red: #FF0000;
 
 $tms-color-white-light: rgba($tms-color-white, 0.16);
 $tms-color-white-medium: rgba($tms-color-white, 0.3);
 
 $tms-color-black-light: rgba($tms-color-black, 0.45);
+
+$tms-color-grid-bg: #F2F2F2;
 
 $tms-color-user: #3AC4AB;
 
