--- a/src/app/components/tms-header/tms-header.component.scss
+++ b/src/app/components/tms-header/tms-header.component.scss
@@ -2,15 +2,31 @@
 @use '../../../styles/colors' as *;
 
 .tms-header {
-  background-color: transparent;
   height: 56px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 0 16px;
 
-  &--right {
+  &--right,
+  &--left {
     height: 100%;
+    display: flex;
+    align-items: center;
+  }
+
+  &__links {
+    display: flex;
+    align-items: center;
+  }
+
+  &__link {
+    font-family: "GoogleSans-Light", sans-serif;
+    margin-right: 24px;
+    cursor: pointer;
+  }
+
+  &__widget {
     display: flex;
     align-items: center;
     gap: 24px;
@@ -19,8 +35,6 @@
   &__button {
     height: 32px;
     padding: 0 16px;
-    background-color: $tms-color-white-medium;
-    color: $tms-color-white;
     font-size: 13px;
     border-radius: 24px;
     border: none;
@@ -33,6 +47,7 @@
       display: flex;
       align-items: center;
       position: relative;
+      margin-right: 24px;
     }
 
     &--add {
@@ -56,6 +71,34 @@
     &-icon {
       @include background-template;
       margin-right: 4px;
+      cursor: pointer;
+
+      &.apps {
+        @include icon-size-default;
+        background-image: url('../../../assets/icons/tms-icon-button-header-dark.svg');
+      }
+
+      &.home {
+        @include icon-size-default;
+        background-image: url('../../../assets/icons/tms-icon-home.svg');
+
+        &-container {
+          padding: 0 24px 0 16px;
+          margin-right: 16px;
+          border-right: 0.5px solid $tms-color-grey;
+        }
+      }
+
+      &.setting {
+        @include icon-size-default;
+        background-image: url('../../../assets/icons/tms-icon-setting.svg');
+
+        &-container {
+          padding: 0 24px;
+          margin-right: 40px;
+          border-right: 0.5px solid $tms-color-grey;
+        }
+      }
 
       &.edit {
         @include icon-size-small;
@@ -80,8 +123,24 @@
 
     div {
       @include icon-size-default;
+      @include background-template;
       cursor: pointer;
     }
+  }
+
+  &__dropdown-item {
+    @include icon-size-default;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    gap: 16px;
+  }
+
+  &__dropdown-icon {
+    @include icon-size-default;
+    @include background-template;
+    cursor: pointer;
   }
 
   &__user {
@@ -94,6 +153,7 @@
     align-items: center;
     color: $tms-color-white;
     font-weight: 500;
+    cursor: pointer;
   }
 
   &__popover {
