--- a/src/app/shared/components/tms-popup-modal/tms-popup-modal-footer/tms-popup-modal-footer.component.scss
+++ b/src/app/shared/components/tms-popup-modal/tms-popup-modal-footer/tms-popup-modal-footer.component.scss
@@ -1,7 +1,7 @@
 @use "../../../../../styles/colors.scss" as *;
 
 .tms-modal__footer {
-  padding: 16px 24px 24px;
+  padding: 16px 0 24px;
   display: flex;
   align-items: center;
   justify-content: flex-end;
