--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -22,3 +22,7 @@
 @mixin input-box-shadow {
   box-shadow: 0 1px 5px 2px rgba(0, 0, 0, 0.1);
 }
+
+@mixin table-row-shadow {
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
