--- a/src/app/components/tms-project/tms-grid/tms-grid.component.html
+++ b/src/app/components/tms-project/tms-grid/tms-grid.component.html
@@ -10,7 +10,7 @@
     [showBorders]="false"
     [showRowLines]="true"
     [hoverStateEnabled]="true"
-    columnResizingMode="nextColumn"
+    columnResizingMode="widget"
   >
     <dxi-column
       caption=""
